# 2025-tic-projetobase-back-python

./: README.md
fast_api/app/: .dockerignore  .env-example  .env.example  Dockerfile  pyproject.toml  requirements.txt  settings.py  start.sh
fast_api/app/migrations/: env.py
fast_api/app/migrations/versions/: 91b20b2051a0_create_course_and_enrollment_tables.py  d255e811e9ec_create_field_password_in_users.py  ec33e2b20607_create_users_table.py
fast_api/app/src/: main.py
fast_api/app/src/core/: course.py  enrollment.py  user.py
fast_api/app/src/core/abstractions/: domain_base.py
fast_api/app/src/core/enums/: enum_type.py
fast_api/app/src/data/: database.py
fast_api/app/src/domains/: __init__.py  user.py
fast_api/app/src/domains/enums/: role_type.py
fast_api/app/src/features/: base_handler.py
fast_api/app/src/features/auth/: auth_controller.py
fast_api/app/src/features/auth/methods/: auth.py
fast_api/app/src/features/seeds/: seeds_controller.py
fast_api/app/src/features/seeds/methods/: __init__.py  seeds.py
fast_api/app/src/features/users/: users_controller.py
fast_api/app/src/features/users/methods/: create.py  delete.py  edit.py  (+2 more)
fast_api/app/src/infrastructure/: queries.py  utils.py  validations.py
fast_api/app/src/infrastructure/data/: seed_executor.py
fast_api/app/src/infrastructure/pagination/: functions.py  models.py
fast_api/app/src/infrastructure/results/: auth.py  base.py  default.py  user.py
fast_api/app/src/infrastructure/security/: routes.py  token.py
fast_api/app/src/infrastructure/validations/: existence.py  fields.py
(+5 files in other folders)
